# ffmpegDome

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegdome/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ffmpegdome/: MainActivity.kt
app/src/main/java/com/example/ffmpegdome/configuration/: ConfigurationActivity.kt
app/src/main/java/com/example/ffmpegdome/main/: MainActivity.kt  MainAdapter.kt  MainViewModel.kt
app/src/main/java/com/example/ffmpegdome/onlyAudio/: OnlyAudioActivity.kt  OnlyAudioViewModel.kt
app/src/main/java/com/example/ffmpegdome/onlyVideo/: OnlyVideoActivity.kt  OnlyVideoPlayer.kt  OnlyVideoViewModel.kt
app/src/main/java/com/example/ffmpegdome/opensles/: AudioPlayer.kt  OpenSLESActivity.kt  UrlAudioPlayer.kt
app/src/main/java/com/example/ffmpegdome/player/: PlayerActivity.kt  PlayerViewModel.kt
app/src/main/java/com/example/ffmpegdome/playvideoofaudio/: PlayVideoOfAudioActivity.kt  PlayVideoOfAudioViewModel.kt
app/src/main/java/com/example/ffmpegdome/utils/: PermissionUtil.java  ScreenUtils.kt
app/src/main/res/layout/: activity_config.xml  activity_main.xml  activity_opensles.xml  activity_player.xml  activity_video_of_audio.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpegdome/: ExampleUnitTest.kt
ffmpegbuildtools/: build_clang.sh  build_clang_debug.sh
ffmpegmodule/: build.gradle
ffmpegmodule/src/main/: AndroidManifest.xml
ffmpegmodule/src/main/cpp/: AudioPlayer.cpp  BlockQueue.cpp  C2JPostEvent.cpp  CMakeLists.txt  FFmpegBase.cpp  FFmpegDecode.cpp  FFmpegDecode1.cpp  FmLib.cpp  UrlAudioPlayer.cpp
ffmpegmodule/src/main/cpp/decode/: AudioDecode.cpp  VideoDecode.cpp
ffmpegmodule/src/main/cpp/ffmpeg/include/libavcodec/: version.h
ffmpegmodule/src/main/cpp/ffmpeg/include/libavfilter/: version.h
ffmpegmodule/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  version.h
ffmpegmodule/src/main/cpp/ffmpeg/include/libswresample/: version.h
ffmpegmodule/src/main/cpp/include/: C2JPostEvent.h  IAudioPlayer.h  IBlockQueue.h  IFFmpegBase.h  IFFmpegDecode.h  ILog.h  IUrlAudioPlayer.h
ffmpegmodule/src/main/cpp/include/controller/: IController.h
ffmpegmodule/src/main/cpp/include/decode/: IAudioDecode.h  IVideoDecode.h
ffmpegmodule/src/main/cpp/include/render/: IAudioRender.h  IVideoRender.h
ffmpegmodule/src/main/cpp/include/sync/: ISync.h  ISyncController.h
ffmpegmodule/src/main/cpp/render/: AudioRender.cpp  VideoRender.cpp
ffmpegmodule/src/main/cpp/sync/: SyncController.cpp
ffmpegmodule/src/main/java/com/example/ffmpegmodule/: EventKey.java  FFmpegNative.java  IPlayer.java
gradle/wrapper/: gradle-wrapper.properties
